--- a/baseline.ipynb
+++ b/baseline.ipynb
@@ -1690,8 +1690,8 @@
    "outputs": [],
    "source": [
     "#输出\n",
-    "#train['prob'] = pred\n",
-    "#test1= train[['prob']]\n",
+    "train['prob'] = pred\n",
+    "test1= train[['prob']]\n",
     "test1.to_csv('./pre/aftertrain.csv',index=True)\n",
     "submission =  pd.read_csv('./pre/aftertrain.csv') "
    ]
