--- a/baseline.ipynb
+++ b/baseline.ipynb
@@ -608,8 +608,8 @@
     "#position直接加上去，LogisticRegression Logistic回归\n",
     "#的训练得分 0.120106201117，可见position特征用处不大\n",
     "position = pd.read_csv('./pre/position.csv')\n",
-    "train = pd.merge(train,statead,position,on='positionID',how='left')\n",
-    "test = pd.merge(test,statead,position,on='positionID',how='left')\n",
+    "train = pd.merge(train,position,on='positionID',how='left')\n",
+    "test = pd.merge(test,position,on='positionID',how='left')\n",
     "position.head()"
    ]
   },
